--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,24 +5,8 @@
 
 # version: 2
 # updates:
-#   - package-ecosystem: "rubygens" # See documentation for possible values
+#   - package-ecosystem: "npm" # See documentation for possible values
 #     directory: "/" # Location of package manifests
 #     schedule:
 #       interval: "daily"
 
-
-# Example configuration file that:
-#  - Ignores lodash dependency
-#  - Disables version-updates
-
-version: 2
-updates:
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "daily"
-    ignore:
-      - dependency-name: "lodash"
-        # For Lodash, ignore all updates
-    # Disable version updates for npm dependencies
-    open-pull-requests-limit: 0
